-Fixed where clone was not happening on lockscreen unless a certain setting was explicitly set in config.json -Fixed PowerSaveOnLock to worked properly and be enabled by default -Install script works better, config.json created to be more verbose -Uninstall script works better, just deletes everything so save your config before uninstalling if you want

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,10 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+# Custom Frostbite Project Ignores
+Program_Rii_i4_Version.cs
+wm.ico
+SettingsForm.cs
+SettingsForm.Designer.cs
+SettingsForm.resx
